bookinfo-example/config/productpage-authn-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: productpage-auth
spec:
  selector:
    matchLabels:
      app: productpage
  jwtRules:
  - issuer: "https://accounts.google.com"
    jwksUri: "https://www.googleapis.com/oauth2/v3/certs"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-auth
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[iss]
      values:
      - "https://accounts.google.com"
